<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_margin="30dp"
    android:background="@drawable/input_border">

    <TextView
        android:id="@+id/course_code_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_code_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/semester_course_code_edit_text"/>

    <EditText
        android:id="@+id/semester_course_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_code_hint"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/course_code_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/credit_unit_textview"/>

    <TextView
        android:id="@+id/credit_unit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_unit_label"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/semester_course_code_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/semester_course_code_edit_text"/>

    <EditText
        android:id="@+id/semester_credit_unit_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_unit_hint"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/credit_unit_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grade_textview"/>

    <TextView
        android:id="@+id/grade_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_label"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/semester_credit_unit_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/semester_grade_spinner"/>

    <Spinner
        android:id="@+id/semester_grade_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:entries="@array/grades"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/grade_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/semester_delete_course_image_button"/>

    <ImageButton
        android:id="@+id/semester_delete_course_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/semester_grade_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>