<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/holder_result_semester_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/GPACalculatorHeaderTextView"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_result_semester_name_text_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableLayout
            android:id="@+id/result_semester_courses_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TableRow
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:text="@string/course_code_label"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:text="@string/credit_unit_label"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:text="@string/grade_label"
                    android:textStyle="bold"/>
            </TableRow>

        </TableLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>